@@ -1,3 +1,7 @@
+2004-11-18  Jonathan Pryor  <jonpryor@vt.edu>
+
+	* stdio.c: Add fread(3) and fwrite(3) wrappers.
+
 2004-11-16  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* Makefile.am: Remove sys-mount.c from the build.
